data/derived/comb/progs/unify/prog5060.ml.out
Characters 120-129:
  | Cosine a -> "cos(pi*" exprToString a ")"
                ^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
